--- a/style.css
+++ b/style.css
@@ -785,6 +785,14 @@ html {
   display: none;
 }
 
+.aspect-\[326\/180\] {
+  aspect-ratio: 326/180;
+}
+
+.aspect-\[572\/350\] {
+  aspect-ratio: 572/350;
+}
+
 .aspect-square {
   aspect-ratio: 1 / 1;
 }
@@ -811,6 +819,10 @@ html {
 
 .w-12 {
   width: 3rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-7 {
@@ -1259,6 +1271,11 @@ html {
   }
 }
 
+#work-process li > img {
+  aspect-ratio: 1 / 1;
+  width: 3rem;
+}
+
 #work-process h3 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -1307,6 +1324,11 @@ html {
   #news .card {
     flex-direction: column;
   }
+}
+
+#news li > img {
+  aspect-ratio: 326/180;
+  width: 100%;
 }
 
 #news .infos {
@@ -1380,6 +1402,8 @@ html {
 #reviews li img {
   margin-left: auto;
   margin-right: auto;
+  aspect-ratio: 1 / 1;
+  width: 3.5rem;
   border-radius: 9999px;
   border-width: 4px;
   --tw-border-opacity: 1;
